# environmental-monitoring

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  monitoring.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: .env.example  Dockerfile  docker-compose.yml
docker/mosquitto/: mosquitto.conf
docs/: ARCHITECTURE.md
docs/adr/: 0001-hexagonal-architecture.md  0002-sqlite-demo-persistence.md  0003-mqtt-v2-callback-api.md
src/cloud/: aws_iot.py
src/dashboard/: app.py
src/environmental_monitoring/: __init__.py  cli.py  config.py
src/environmental_monitoring/api/: __init__.py  __main__.py  app.py  schemas.py
src/environmental_monitoring/application/: __init__.py  ports.py  services.py
src/environmental_monitoring/dashboard/: __init__.py  __main__.py  app.py
src/environmental_monitoring/dashboard/assets/: style.css
src/environmental_monitoring/domain/: __init__.py  exceptions.py  locations.py  models.py
src/environmental_monitoring/infrastructure/: __init__.py  aws_iot.py  mqtt_broker.py  openweather_sensor.py  repository.py  simulator.py
src/iot/: sensor.py
src/utils/: config.py
tests/: conftest.py
tests/api/: test_app.py
tests/dashboard/: test_app.py
tests/infrastructure/: test_aws_iot.py  test_mqtt_broker.py  test_openweather_sensor.py  test_repository.py
tests/unit/: test_config.py  test_locations.py  test_models.py  test_services.py  test_simulator.py
