[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "environmental-monitoring"
version = "1.0.0"
description = "IoT environmental monitoring pipeline: sensors -> MQTT -> ingestion -> storage -> dashboard, with an optional AWS IoT Core cloud adapter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Silmara Moreira" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "paho-mqtt>=2.1,<3",
    "boto3>=1.43,<2",
    "dash>=4.4,<5",
    "plotly>=6.9,<7",
    "pandas>=3.0,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "requests>=2.32,<3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "boto3-stubs[iot-data]>=1.43",
    "pandas-stubs>=2.2",
    "types-requests>=2.32",
    "httpx2>=2.0,<3",
]

[project.scripts]
envmon = "environmental_monitoring.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"environmental_monitoring.dashboard" = ["assets/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=environmental_monitoring --cov-report=term-missing"

[tool.coverage.run]
source = ["src/environmental_monitoring"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.mypy]
# 3.12 so mypy can parse third-party stubs (e.g. numpy) that use PEP 695 `type`
# statements; the package itself still targets/declares requires-python >=3.11.
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["paho.*", "dash.*", "plotly.*"]
ignore_missing_imports = true
